; ModuleID = '/home/carl/AnghaBench/libevent/test/extr_regress.c_test_mm_functions.c'
source_filename = "/home/carl/AnghaBench/libevent/test/extr_regress.c_test_mm_functions.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.event_base = type { i32 }
%struct.event_config = type { i32 }

@dummy_malloc = common dso_local global i32 0, align 4
@dummy_realloc = common dso_local global i32 0, align 4
@dummy_free = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [9 x i8] c"Nonesuch\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @test_mm_functions to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_mm_functions(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.event_base*, align 8
  %4 = alloca %struct.event_config*, align 8
  store i8* %0, i8** %2, align 8
  store %struct.event_base* null, %struct.event_base** %3, align 8
  store %struct.event_config* null, %struct.event_config** %4, align 8
  %5 = load i32, i32* @dummy_malloc, align 4
  %6 = load i32, i32* @dummy_realloc, align 4
  %7 = load i32, i32* @dummy_free, align 4
  %8 = call i32 @event_set_mem_functions(i32 %5, i32 %6, i32 %7)
  %9 = call %struct.event_config* (...) @event_config_new()
  store %struct.event_config* %9, %struct.event_config** %4, align 8
  %10 = load %struct.event_config*, %struct.event_config** %4, align 8
  %11 = call i32 @event_config_avoid_method(%struct.event_config* %10, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0))
  %12 = load %struct.event_config*, %struct.event_config** %4, align 8
  %13 = call %struct.event_base* @event_base_new_with_config(%struct.event_config* %12)
  store %struct.event_base* %13, %struct.event_base** %3, align 8
  %14 = load %struct.event_base*, %struct.event_base** %3, align 8
  %15 = call i32 @tt_assert(%struct.event_base* %14)
  %16 = load %struct.event_base*, %struct.event_base** %3, align 8
  %17 = call %struct.event_base* @check_dummy_mem_ok(%struct.event_base* %16)
  %18 = call i32 @tt_assert(%struct.event_base* %17)
  br label %19

19:                                               ; preds = %1
  %20 = load %struct.event_config*, %struct.event_config** %4, align 8
  %21 = icmp ne %struct.event_config* %20, null
  br i1 %21, label %22, label %25

22:                                               ; preds = %19
  %23 = load %struct.event_config*, %struct.event_config** %4, align 8
  %24 = call i32 @event_config_free(%struct.event_config* %23)
  br label %25

25:                                               ; preds = %22, %19
  %26 = load %struct.event_base*, %struct.event_base** %3, align 8
  %27 = icmp ne %struct.event_base* %26, null
  br i1 %27, label %28, label %31

28:                                               ; preds = %25
  %29 = load %struct.event_base*, %struct.event_base** %3, align 8
  %30 = call i32 @event_base_free(%struct.event_base* %29)
  br label %31

31:                                               ; preds = %28, %25
  ret void
}

declare dso_local i32 @event_set_mem_functions(i32, i32, i32) #1

declare dso_local %struct.event_config* @event_config_new(...) #1

declare dso_local i32 @event_config_avoid_method(%struct.event_config*, i8*) #1

declare dso_local %struct.event_base* @event_base_new_with_config(%struct.event_config*) #1

declare dso_local i32 @tt_assert(%struct.event_base*) #1

declare dso_local %struct.event_base* @check_dummy_mem_ok(%struct.event_base*) #1

declare dso_local i32 @event_config_free(%struct.event_config*) #1

declare dso_local i32 @event_base_free(%struct.event_base*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
